# eece5554

./: README.md
Final Project/: README.md
LAB1/src/: 2022-02-07-13-58-34.bag  2022-02-07-14-10-04.bag  gps_plot.m
LAB1/src/Gps-driver/lab1_package/msg/: gps_msg.msg
LAB1/src/Gps-driver/lab1_package/scripts/: gps_driver.py
LAB2/src/lab2_package/: CMakeLists.txt  package.xml
LAB2/src/lab2_package/Analysis/: lab2_analysis.m
LAB2/src/lab2_package/msg/: gps_msg.msg
LAB2/src/lab2_package/scripts/: gps_driver.py
LAB3/src/Analysis/: lab3_analysis.m  lab3_short_analysis.m
LAB3/src/lab3_package/: CMakeLists.txt  package.xml
LAB3/src/lab3_package/msg/: imu_msg.msg
LAB3/src/lab3_package/scripts/: imu_driver.py
LAB4/src/analysis/: lab4_analysis.m  lab4_circles.m  lab4_sensor_offset.m
LAB4/src/analysis/analysis_tools/: filtered_magnetometer_heading.mat  fit_ellipse.m  pitch_compensation.m
LAB4/src/gps_imu_drivers/__MACOSX/: ._gps_imu_drivers
LAB4/src/gps_imu_drivers/__MACOSX/gps_imu_drivers/: ._CMakeLists.txt  ._README.txt  ._launch  ._msg  ._package.xml  ._scripts
LAB4/src/gps_imu_drivers/gps_imu_drivers/: CMakeLists.txt  README.txt  package.xml
LAB4/src/gps_imu_drivers/gps_imu_drivers/launch/: lab4datalogging.launch
LAB4/src/gps_imu_drivers/gps_imu_drivers/msg/: gps_data.msg
LAB4/src/gps_imu_drivers/gps_imu_drivers/scripts/: vn100_pub_node.py
LAB5/: image_stitching.m
PA0/: PA0.txt
PA1/matts_first_package/: CMakeLists.txt  package.xml
PA1/matts_first_package/scripts/: listener.py  talker.py
(+8 files in other folders)
